# transmission_mgtd

./: README.md  requirements.txt  setup.cfg
etc/: transmission_mgtd.conf
transmission_mgtd/: __init__.py
