[metadata]
name = transmission_mgtd
author = Alexandros Kosiaris
author_email = akosiaris@gmail.com
summary = A python daemon to manage transmission-daemon
license = 'ISC'
description-file =
	README.md
home-page = https://github.com/akosiaris/transmission_mgtd
# See https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifier =
	Development Status :: 4 - Beta
	Intended Audience :: End Users/Desktop
	Intended Audience :: System Administrators
	License :: OSI Approved :: ISC License (ISCL)
	Natural Language :: English
	Programming Language :: Python
	Operating System :: POSIX
keywords =
	transmission
	rss
	daemon

[files]
packages =
	transmission_mgtd

data_files =
	etc/transmission_mgtd = etc/*

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0
